--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <div id="app"></div>
+    <div id="test"></div>
     <script src="./iconfont/iconfont.js"></script>
   </body>
 </html>
